<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register.presentation.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:src="@drawable/photo_icon"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <TextView
        style="@style/InstaFormTextView"
        android:text="@string/photo_register_title"
        android:textSize="24sp"
        android:layout_gravity="center" />

    <TextView
        style="@style/InstaFormTextView"
        android:text="@string/photo_register_subtitle"
        android:layout_gravity="center" />


    <com.silvandrade.instagramremakejava.common.view.CustomButton
        android:id="@+id/register_email_button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/next" />

</LinearLayout>